# astrohacker-terminal

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  NOTICE  README.md  TRADEMARKS.md  package.json
bun/: package.json
bun/astrohacker-terminal-website/: package.json
bun/gtui-app/: README.md  package.json  server.ts
docs/: README.md  astrohacker-terminal-todo.md  astrohacker-terminal.md  environment.md  ghostboard-launch-discovery.md  ghostty.md  girlbat-pdf-support.md  girlbat-render-surface-transport.md  homebrew.md  keybindings.md  ladybird-pdf-support.md  ladybird-protobuf-coverage.md  ladybird-render-surface-transport.md  ladybird-rendering-strategy.md  vendor.md  xdg.md
patches/: AGENTS.md  README.md  release-manifest.json
patches/chromium/: AGENTS.md  README.md
patches/gecko/: AGENTS.md  README.md
patches/ghostty/: AGENTS.md  README.md
patches/helix/: README.md
patches/ladybird/: AGENTS.md  README.md
rust/: AGENTS.md  Cargo.toml
scripts/: build.sh  ghostboard-geometry-matrix.sh  install.sh  png-to-webp.sh  test-girlbat-ghostboard-runtime-smoke.sh  test-girlbat-ladybird-probe.sh  test-issue-867-installed-cross-engine-runtime.sh  test-issue-867-release-no-env-browser-discovery.sh  test-issue-869-installed-homebrew-browser-smoke.sh  test-issue-870-surfari-cursor-hover.sh  test-issue-871-installed-homebrew-cursor-smoke.sh  test-issue-872-installed-homebrew-scroll-smoke.sh  test-issue-882-installed-cold-start.sh  test-ladybird-engine-probe.sh  test-ladybird-ghostboard-runtime-smoke.sh  uninstall.sh
terminal/: AGENTS.md  README.md
(+168 files in other folders)
